fixed some z-index issues, added background color and added to splash page

--- a/frontend/src/components/roulette/roulette.scss
+++ b/frontend/src/components/roulette/roulette.scss
@@ -30,6 +30,8 @@ a{
 	position:relative;
 	overflow:hidden;
 	border:8px solid #fff;
+	z-index: -1;
+
 	box-shadow:rgba(0,0,0,0.2) 0px 0px 10px, rgba(0,0,0,0.05) 0px 3px 0px;
 	transform: rotate(0deg);
 }
@@ -54,6 +56,34 @@ a{
 	// -ms-transition:     all 6s cubic-bezier(0,.99,.44,.99);
 	// transition:         all 6s cubic-bezier(0,.99,.44,.99);	
 	animation: rotate 1s linear infinite;
+}
+
+#splash-inner-wheel{
+	width:100%;
+	height:100%;
+	
+	// -webkit-transition: all 6s cubic-bezier(0,.99,.44,.99);
+	// -moz-transition:    all 6 cubic-bezier(0,.99,.44,.99);
+	// -o-transition:      all 6s cubic-bezier(0,.99,.44,.99);
+	// -ms-transition:     all 6s cubic-bezier(0,.99,.44,.99);
+	// transition:         all 6s cubic-bezier(0,.99,.44,.99);	
+	animation: rotate 2s linear infinite;
+}
+
+.splash-inner-wheel {
+    width: 54px;
+    height: 54px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    margin: -27px 0 0 -27px;
+    border-radius: 50%;
+    background: red;
+    z-index: 999;
+    /* box-shadow: white 0px -2px 0px inset, white 0px 2px 0px inset, rgba(0, 0, 0, 0.4) 0px 0px 5px; */
+    background: white;
+    /* background: radial-gradient(ellipse at center, white 0%, #eaeaea 100%); */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#eaeaea',GradientType=1 );
 }
 
 @keyframes rotate {
